--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>simple-projects</groupId>
-    <artifactId>simple-projects</artifactId>
+    <groupId>scratch</groupId>
+    <artifactId>scratch</artifactId>
+    <name>scratch</name>
+    <description>Scratch pad for various projects and testing</description>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <name>Simple projects and testing for ideas and tools</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
@@ -29,7 +27,7 @@
 
     <modules>
         <module>printbits</module>
-        <module>scratch</module>
+        <module>testing</module>
     </modules>
 
     <dependencyManagement>
@@ -62,13 +60,21 @@
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.1.0</version>
                 </plugin>
+                <!-- Compile source code -->
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.0</version>
                 </plugin>
+                <!-- Run unit tests -->
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.1</version>
+                </plugin>
+                <!-- Create executable JAR -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.6.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
