--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -13,13 +13,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>scratch</groupId>
-    <artifactId>scratch</artifactId>
+    <groupId>testing</groupId>
+    <artifactId>testing</artifactId>
+    <name>testing</name>
+    <description>Simple tests</description>
     <version>1.0</version>
-    <name>Scratch pad for tests</name>
     <parent>
-        <groupId>simple-projects</groupId>
-        <artifactId>simple-projects</artifactId>
+        <groupId>scratch</groupId>
+        <artifactId>scratch</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
